--- a/frontend/tabetai/src/components/Schedule/Schelude.css
+++ b/frontend/tabetai/src/components/Schedule/Schelude.css
@@ -19,28 +19,28 @@
     max-width: 400px;
   }
   
-  h1 {
+  .parr {
     font-size: 30px;
     font-weight: bold;
   }
   
-  h2 {
+  .parr2 {
     font-size: 25px;
     font-weight: bold;
   }
   
-  h3 {
+  .parr3 {
     font-size: 20px;
     color: rgb(234, 234, 234);
     font-weight: bold;
   }
   
-  p {
+  .parrafo {
     font-size: 18px;
     font-weight: bold;
   }
   
-  button {
+  .btn-sch {
     background-color: #f44336;
     border: none;
     color: white;
