--- a/frontend/tabetai/src/components/AddReservation/AddReservation.css
+++ b/frontend/tabetai/src/components/AddReservation/AddReservation.css
@@ -32,14 +32,29 @@ body {
 }
 
 .registrar {
-    padding: 10px 20px;
-    font-size: 18px;
-    background-color: #007BFF;
+    padding: 3%;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-top: 10px;
+    background-color: #007bff;
     color: white;
     border: none;
+    border-radius: 3px;
     cursor: pointer;
 }
 
 .registrar:hover {
     background-color: #0056b3;
+}
+
+.atras{
+    padding-left: 12%;
+    padding-right: 12%;
+    text-decoration: none;
+}
+
+.resback{
+    display: flex;
+    justify-content: center;
+    gap: 10%;
 }
