--- a/frontend/tabetai/src/components/ConfirmationReservation/ConfirmationReservation.css
+++ b/frontend/tabetai/src/components/ConfirmationReservation/ConfirmationReservation.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -60,4 +60,4 @@ body {
     color: #888;
     text-align: center;
   }
-  
+   */
