--- a/frontend/tabetai/src/components/Schedule/Schelude.css
+++ b/frontend/tabetai/src/components/Schedule/Schelude.css
@@ -3,7 +3,6 @@
     text-align: center;
     color: rgb(0, 0, 0);
   }
-  
   .container-wrapper {
     display: flex;
     justify-content: center;
@@ -11,7 +10,6 @@
   }
   
   .container {
-    flex: 1;
     background-color: #66ccf1;
     border-radius: 10px;
     padding: 20px;
@@ -30,44 +28,18 @@
   }
   
   .parr3 {
-    font-size: 20px;
+    font-size: 24px;
     color: rgb(234, 234, 234);
     font-weight: bold;
   }
   
-  .parrafo {
-    font-size: 18px;
-    font-weight: bold;
+.parrafo {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    padding: 40px;
   }
-  
-  .btn-sch {
-    background-color: #f44336;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  .line-after-paragraphh::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: rgb(0, 0, 0);
-    margin-top: 25px;
-  }
-  
-  .waze {
-    font-size: 30px;
-  }
-  
-  .country {
-    color: rgb(255, 255, 255);
-  }
-  
+}
