--- a/frontend/tabetai/src/components/AddReservation/AddReservation.css
+++ b/frontend/tabetai/src/components/AddReservation/AddReservation.css
@@ -32,7 +32,7 @@ body {
 }
 
 .registrar {
-    padding: 3%;
+    padding: 2%;
     padding-left: 10%;
     padding-right: 10%;
     margin-top: 10px;
@@ -47,14 +47,29 @@ body {
     background-color: #0056b3;
 }
 
-.atras{
+.antes{
     padding-left: 12%;
     padding-right: 12%;
     text-decoration: none;
+    display: flex;
+    align-items: center;
 }
 
 .resback{
     display: flex;
     justify-content: center;
     gap: 10%;
+}
+
+.label-client-resr {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    display: none;
+}
+
+.btn-reservar{
+    background-color: transparent;
+    border: none;
+    color: white;
 }
