--- a/frontend/tabetai/src/components/Location/Location.css
+++ b/frontend/tabetai/src/components/Location/Location.css
@@ -1,63 +1,64 @@
+/* Location.css */
+
 .fontt {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    color: rgb(0, 0, 0);
-  }
-  
-  .container-wrapperr {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-  
-  .containerr {
-    background-color: #66ccf1;
-    border-radius: 10px;
-    padding: 20px;
-    margin: 20px 20px; /* Reducido el margen horizontal a 5px */
-    max-width: 400px;
-  }
-  
-  .parra {
-    font-size: 30px;
-    font-weight: bold;
-  }
-  
-  .parra2 {
-    font-size: 25px;
-    font-weight: bold;
-  }
+  font-family: Arial, sans-serif;
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
+
+.container-wrapperr {
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Alinea verticalmente el contenido */
+  height: 100vh; /* Establece la altura al 100% del viewport height */
+}
+
+.containerr {
+  background-color: #66ccf1;
+  border-radius: 10px;
+  padding: 20px;
+  max-width: 400px;
+  text-align: center; /* Centra el texto */
+}
+
+.parr {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.parr2 {
+  font-size: 25px;
+  font-weight: bold;
+}
 
 .parrafoo {
-    font-size: 18px;
-    font-weight: bold;
+  font-size: 22px;
+  font-weight: bold;
 }
 
 .btn-sch {
-    background-color: #f44336;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 5px;
+  background-color: #f44336;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .line-after-paragraphh::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: rgb(0, 0, 0);
-    margin-top: 25px;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: rgb(0, 0, 0);
+  margin-top: 25px;
 }
 
-
-
 .country {
-    color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
 }
