--- a/frontend/tabetai/src/components/GoogleMaps/GoogleMaps.css
+++ b/frontend/tabetai/src/components/GoogleMaps/GoogleMaps.css
@@ -11,3 +11,22 @@
     margin: 0;
     padding: 0;
   }
+
+  @media (max-width: 767px) {
+    .map-container {
+      position: relative;
+      overflow: hidden;
+      padding-bottom: 56.25%; /* Proporción de aspecto 16:9 para hacer el contenedor responsive */
+      height: 0;
+    }
+    
+    .map {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      padding-bottom: 3%;
+    }
+    
+}
