--- a/frontend/tabetai/src/components/Location/Location.css
+++ b/frontend/tabetai/src/components/Location/Location.css
@@ -7,10 +7,7 @@
 }
 
 .container-wrapperr {
-  display: flex;
-  justify-content: center;
-  align-items: center; /* Alinea verticalmente el contenido */
-  height: 100vh; /* Establece la altura al 100% del viewport height */
+  height: 90vh; /* Establece la altura al 100% del viewport height */
 }
 
 .containerr {
@@ -32,7 +29,7 @@
 }
 
 .parrafoo {
-  font-size: 22px;
+  font-size: 19px;
   font-weight: bold;
 }
 
@@ -61,4 +58,12 @@
 
 .country {
   color: rgb(255, 255, 255);
+}
+
+
+
+@media (max-width: 767px) {
+  .container-wrapperr {
+  height: 55vh; /* Establece la altura al 100% del viewport height */
+  }
 }
