--- a/frontend/tabetai/src/components/Location/Location.css
+++ b/frontend/tabetai/src/components/Location/Location.css
@@ -7,7 +7,7 @@
 }
 
 .container-wrapperr {
-  height: 90vh; /* Establece la altura al 100% del viewport height */
+  height: 50vh; /* Establece la altura al 100% del viewport height */
 }
 
 .containerr {
@@ -60,10 +60,22 @@
   color: rgb(255, 255, 255);
 }
 
+.containerr {
+  background-color: #66ccf1;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 20px 20px;
+  max-width: 400px;
+}
 
 
 @media (max-width: 767px) {
   .container-wrapperr {
-  height: 55vh; /* Establece la altura al 100% del viewport height */
+  height: 75vh; /* Establece la altura al 100% del viewport height */
+  }
+  .containerr {
+    padding: 20px;
+    margin: 0px;
+    max-width: 350px;
   }
 }
